# cmake-learn

./: CMakeLists.txt  CalculateSqrtConfig.h.in  README.md  calculateSqrt.cpp  cmake-cpack生成安装包.md  cmake-start.md  cmake-添加库.md  cmake-自定义命令、文件生成.md  cmake0-语法.md  cmake3-安装、测试、系统自检.md
MathFunctions/: CMakeLists.txt
step1/: CMakeLists.txt  CalculateSqrt.cpp
step2/: CMakeLists.txt
step2/MathFunctions/: MySqrt.cpp
step3/: CMakeLists.txt
step3/MathFunctions/: CMakeLists.txt  MySqrt.cpp
step4/: CalculateSqrt.cpp
step4/MathFunctions/: CMakeLists.txt  MySqrt.cpp
step5/: CMakeLists.txt
step5/MathFunctions/: MakeTable.cpp  MySqrt.cpp
